initial push to github

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 <th>About Myself</th>
             </tr>
             <tr>
-                <td>Row 1, Cell 1</td>
-                <td>Row 1, Cell 2</td>
-                <td rowspan="2">Row 1, Cell 3</td>
+                <td>drawing</td>
+                <td>Music, Art,</td>
+                <td rowspan="2"> I am 19 yo from morocco always been a fan of gaming and want to learn the origine of it</td>
             </tr>
             <tr>
-                <td>Row 2, Cell 1</td>
-                <td>Row 2, Cell 2</td>
+                <td>Gaming</td>
+                <td>sports</td>
             </tr>
         </table>
     </section>
