--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>ILYAS - Personal Website</title>
+    <title>ILYAAAS - Personal Website</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
