--- a/Source.html
+++ b/Source.html
@@ -6,14 +6,29 @@
     <title>Sources</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="https://www.w3schools.com/"><img src="C:\GAME 111\images\W3.png" alt="Image Description" width="300">
-                <hr>
-                <li><a href="https://chat.openai.com/"><img src="C:\GAME 111\images\GPT.jpg" alt="Image Description" width="300">
-            </ul>
-        </nav>
-    </header>
+<center>
+    <ol>
+        <li><a href="https://www.w3schools.com/"w3schools>
+        <img src="images/W3.png" alt="w3schools">
+        </a>
+        </li>
+        <br>
+        <hr>
+        <li><a href="https://stackoverflow.com/">
+            <img src="images/SO.png" alt="stackoverflow">
+            </a>
+        </li>
+            <br>
+            <hr>
+            <li><a href="https://www.computerhope.com/">
+                <img src="images/CH.png" alt="computerhope">
+                </a>
+            </li>
+    </ol>            
+</center>
+
+<footer>
+    <center><p>Ilyas Ouenza<P></center>
+</footer>
 </body>
 </html>
