--- a/index.html
+++ b/index.html
@@ -1,97 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ILYAAAS - Personal Website</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ilyas's website</title>
 </head>
 <body>
-    <a href="#bottom">Go to Bottom</a>
+    <a href="#bottom">Bottom</a>
     <header>
-        <h1>ILYAS</h1>
+        <h1><center>Ilyas's website</center></h1>
         <hr>
         <br>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <section id="bio">
-        <h2>Biography</h2>
-        <p>My bio.</p>
+    <h2>Biography</h2>
+    <table border="1">
+        <tr>
+            <th>Hobbies</th>
+            <th>Interests</th>
+            <th>About Myself</th>
+        </tr>
+        <tr>
+            <td>drawing</td>
+            <td>Music, Art</td>
+            <td rowspan="2">I am 19 years old from Morocco. I have always been a fan of gaming and want to learn its origin.</td>
+        </tr>
+        <tr>
+            <td>Gaming</td>
+            <td>Sports</td>
+        </tr>
+    </table>
 
-        <table border="1">
-            <tr>
-                <th>Hobbies</th>
-                <th>Interests</th>
-                <th>About Myself</th>
-            </tr>
-            <tr>
-                <td>drawing</td>
-                <td>Music, Art,</td>
-                <td rowspan="2"> I am 19 yo from morocco always been a fan of gaming and want to learn the origine of it</td>
-            </tr>
-            <tr>
-                <td>Gaming</td>
-                <td>sports</td>
-            </tr>
-        </table>
-    </section>
+    <h2>Portfolio</h2>
+     <p>My stuff<a href="portfolio.html">&nbsp;&nbsp;&nbsp;Portfolio</a></p>
 
-    <section id="portfolio">
-        <h2>Portfolio</h2>
-        <p>Some of my work:</p>
-        <ul>
-            <li><a href="#">Project 1</a></li>
-            <li><a href="#">Project 2</a></li>
-        </ul>
-    </section>
 
-    <section id="photo">
-        <h2>Photo</h2>
+    <h2>Photo</h2>
         <p>Click the phone</p>
 
         <img src="images/mypic.jpg" alt="Image Description" width="200" height="200" usemap="#Iphone">
         <map name="Iphone">
             <area shape="rect" coords="85,100,115,145" alt="phone" href="https://www.apple.com/ca/iphone/">
         </map>
-    </section>
 
-    <section id="resume">
-        <h2>Resume</h2>
+    <h2>Resume</h2>
         <p>Ilyas's resume <a href="images/Resume.docx">here</a>.</p>
-    </section>
 
-    <section id="testimonials">
-        <h2>Testimonials</h2>
+    <h2>Testimonials</h2>
         <blockquote>
             <p><q>Good website.</q> - Adam Ouenza</p>
         </blockquote>
-    </section>
 
-    <section id="contact">
-        <h2>Contact Info</h2>
+    <h2>Contact Info</h2>
         <address>
             <p>Email: <a href="mailto:ouenzajack@gmail.com">ouenzajack@gmail.com</a></p>
             <p>Phone: (873) 353-9565</p>
         </address>
-    </section>
-
-    <section id="Sources">
-        <h2>What I Used</h2>
+    
+    <h2>What I Used</h2>
         <ul>
             <li><a href="Source.html">here</a></li>
         </ul>
-    </section>
 
-    <footer>
-        &copy; 2023 OUENZA ILYAS
-    </footer>
-
-    <a href="#top">Go to Top</a>
+        <footer>
+            <center><p>Ilyas Ouenza<P></center>
+        </footer>
+    
+    <a href="#top">Top</a>
     <div id="bottom"></div>
 </body>
 </html>
