--- a/portfolio.html
+++ b/portfolio.html
@@ -2,35 +2,26 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Your Portfolio - Personal Website</title>
+    <title>Ilyas's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 <body>
     <header>
-        <h1>Your Name - Portfolio</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-            </ul>
-        </nav>
+        <h1><center>Ilyas's Portfolio</center></h1>
     </header>
 
-    <section id="project1">
-        <h2>Project 1</h2>
-        <p>Description of your first project.</p>
-    </section>
 
-    <section id="project2">
-        <h2>Project 2</h2>
-        <p>Description of your second project.</p>
-    </section>
+<h1>ART</h1>
+        <p>I used to draw a lot on my free time, hope i go back to it</p>
+        <img src= "images/Art1.jpg"  width="500" height="500">
+        <img src= "images/Art2.jpg"  width="500" height="500">
+        <img src= "images/Art3.jpg"  width="500" height="500">
 
 
 
-    <footer>
-        &copy; 2023 Your Name
-    </footer>
+        <footer>
+            <center><p>Ilyas Ouenza<P></center>
+        </footer>
 </body>
 </html>
