--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
     <h2>Contact Info</h2>
         <address>
-            <p>Email: <a href="mailto:ouenzajack@gmail.com">ouenzajack@gmail.com</a></p>
-            <p>Phone: (873) 353-9565</p>
+            <p>Email: <a href="mailto:ouenzajack@gmail.com">ilyaswebsite@gmail.com</a></p>
+            <p>Phone: (123) 456 7890</p>
         </address>
     
     <h2>What I Used</h2>
