--- a/Source.html
+++ b/Source.html
@@ -6,8 +6,8 @@
     <title>Sources</title>
 </head>
 <body>
-<center>
-    <ol>
+
+    <ol style="text-align: center;">
         <li><a href="https://www.w3schools.com/"w3schools>
         <img src="images/W3.png" alt="w3schools">
         </a>
@@ -25,10 +25,10 @@
                 </a>
             </li>
     </ol>            
-</center>
-
-<footer>
-    <center><p>Ilyas Ouenza<P></center>
-</footer>
+<hr>
+        <footer>
+           <p style="text-align: center;">
+            Ilyas Ouenza<P>
+        </footer>
 </body>
 </html>
