--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <h1><center>Ilyas's Portfolio</center></h1>
+        <h1 style="text-align: center;">
+            Ilyas's Portfolio</h1>
     </header>
 
 
@@ -19,9 +20,10 @@
         <img src= "images/Art3.jpg"  width="500" height="500">
 
 
-
+        <hr>
         <footer>
-            <center><p>Ilyas Ouenza<P></center>
+           <p style="text-align: center;">
+            Ilyas Ouenza<P>
         </footer>
 </body>
 </html>
