--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+h1 {
+color: rgb(212, 0, 255);
+}
+
+h2 {
+    color:rgb(162, 0, 255) ;
+}
+
+
+    </style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +19,8 @@
 <body>
     <a href="#bottom">Bottom</a>
     <header>
-        <h1><center>Ilyas's website</center></h1>
+        <h1 style="text-align: center;">
+            Ilyas's website</h1>
         <hr>
         <br>
     </header>
@@ -61,9 +73,10 @@
         <ul>
             <li><a href="Source.html">here</a></li>
         </ul>
-
+<hr>
         <footer>
-            <center><p>Ilyas Ouenza<P></center>
+            <p style="text-align: center;">
+                Ilyas Ouenza<P>
         </footer>
     
     <a href="#top">Top</a>
