removed center tag

--- a/Source.html
+++ b/Source.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sources</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">  
 </head>
 <body>
 
     <ol style="text-align: center;">
-        <li><a href="https://www.w3schools.com/"w3schools>
-        <img src="images/W3.png" alt="w3schools">
+        <li><a href="https://www.w3schools.com/">
+        <img src="images/W3.png" alt="">
         </a>
         </li>
-        <br>
-        <hr>
-        <li><a href="https://stackoverflow.com/">
-            <img src="images/SO.png" alt="stackoverflow">
+       <li><a href="https://stackoverflow.com/">
+            <img src="images/SO.png" alt="">
             </a>
         </li>
-            <br>
-            <hr>
-            <li><a href="https://www.computerhope.com/">
-                <img src="images/CH.png" alt="computerhope">
+        <li><a href="https://www.computerhope.com/">
+                <img src="images/CH.png" alt="">
                 </a>
             </li>
     </ol>            
