--- a/portfolio.html
+++ b/portfolio.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Ilyas's Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
 </head>
 <body>
@@ -15,11 +15,13 @@
 
 <h1>ART</h1>
         <p>I used to draw a lot on my free time, hope i go back to it</p>
-        <img src= "images/Art1.jpg"  width="500" height="500">
-        <img src= "images/Art2.jpg"  width="500" height="500">
-        <img src= "images/Art3.jpg"  width="500" height="500">
-
-
+        <img src= "images/Art1.jpg" alt="" width="500" height="500" class="photo">
+        <img src= "images/Art2.jpg" alt="" width="500" height="500" class="photo">
+        <img src= "images/Art3.jpg" alt="" width="500" height="500" class="photo">
+<h1>Pictures</h1>
+        <img src= "images/DQ.jpg" alt="" width="500" height="500" class="photo">
+        <img src= "images/Street.jpg" alt="" width="500" height="500" class="photo">
+        <img src= "images/setup.jpg" alt="" width="500" height="500" class="photo">
         <hr>
         <footer>
            <p style="text-align: center;">
